# sentimental_analysis_backend_pipeline

./: README.md  docker-compose.yaml  fast_api_dockerfile.yaml  pyproject.toml  start.sh
backend_pipeline/: main.py
backend_pipeline/api/: sentiment_analysis.py
backend_pipeline/celery_tasks/: tasks.py
backend_pipeline/celery_tools/: flower.sh  worker.sh
backend_pipeline/celery_tools/celery_tasks/: tasks.py
backend_pipeline/celery_tools/config/: celery_config.py  celery_utils.py
backend_pipeline/config/: celery_config.py  ruff.toml
backend_pipeline/database/: crud_user.py
backend_pipeline/logs/: my_app.log.jsonl
backend_pipeline/model/: user.py
backend_pipeline/routes/: analysis.py  auth.py  user.py
backend_pipeline/schemas/: analysis_schema.py  auth_schemas.py  user_schema.py
grafana/: config.monitoring  grafana.ini
grafana/provisioning/dashboards/: Docker Prometheus Monitoring-1571332751387.json
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
traefik/: dynamic.yaml  traefik.dev.yaml
