[tool.poetry]
name = "backend-pipeline"
version = "0.1.0"
description = ""
authors = ["Alejandro Amar Gil <alejandroamar66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
cassandra-driver = "^3.29.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.220.0"}
pika = "^1.3.2"
email-validator = "^2"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.28"
icecream = "^2.1.3"
mypy = "^1.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.2.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
